--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="../../helpers/header.js" type="module"></script>
-    <script src="index.js" type="module"></script>
+    
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -10,5 +10,6 @@
       <input type="tel" id="phone" maxlength="16" placeholder="mobile number" autocomplete="off" />
       <div><label for="phone">+(123) - 4567890</label></div>
     </div>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
